[package]
name = "milo-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
milo = { path = "../parser" }

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
incremental = false
codegen-units = 16
rpath = false
strip = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false
strip = true
