[package]
  name    = "milo-benchmarks"
  version = "0.2.1"
  edition = "2021"
  publish = false

[dependencies]
  milo            = { path = "../parser" }
  milo-test-utils = { path = "../test-utils" }

[profile.bench]
  opt-level        = 3
  debug            = false
  debug-assertions = false
  overflow-checks  = false
  lto              = true
  incremental      = false
  codegen-units    = 16
  rpath            = false
  strip            = true

[profile.release]
  opt-level        = 3
  debug            = false
  debug-assertions = false
  overflow-checks  = false
  lto              = true
  panic            = 'abort'
  incremental      = false
  codegen-units    = 16
  rpath            = false
  strip            = true
