[package]
  name    = "milo-macros"
  version = "0.2.1"
  edition = "2021"
  publish = false

[lib]
  proc-macro = true

[dependencies]
  indexmap    = { version = "2.2.6", features = ["serde"] }
  proc-macro2 = "1.0.79"
  quote       = "1.0.35"
  regex       = "1.10.4"
  semver      = "1.0.22"
  serde       = { version = "1.0.197", features = ["derive"] }
  serde_json  = "1.0.115"
  serde_yaml  = "0.9.34"
  syn         = { version = "2.0.55", features = ["full", "extra-traits"] }
  toml        = "0.8.12"
