[package]
  name    = "milo-macros"
  version = "0.3.0"
  edition = "2024"
  publish = false

[lib]
  proc-macro = true

[dependencies]
  indexmap    = { version = "2.13.0", features = ["serde"] }
  proc-macro2 = "1.0.106"
  quote       = "1.0.45"
  regex       = "1.12.3"
  semver      = "1.0.27"
  serde       = { version = "1.0.228", features = ["derive"] }
  serde_json  = "1.0.149"
  serde_yaml  = "0.9.34"
  syn         = { version = "2.0.117", features = ["full", "extra-traits"] }
  toml        = "1.0.7"
