[package]
  name    = "milo"
  version = "0.4.0"
  edition = "2024"
  publish = false

[lib]
  crate-type = ["cdylib", "staticlib", "lib"]

[features]
  debug = []

[dependencies]
  milo-macros = { path = "../macros" }
  memchr      = "2.8.0"
  phf         = { version = "0.13.1", default-features = false }

[dev-dependencies]
  regex = "1.12.3"

[profile.release]
  opt-level        = 3
  debug            = false
  debug-assertions = false
  overflow-checks  = false
  lto              = true
  panic            = 'abort'
  incremental      = false
  codegen-units    = 1
  rpath            = false
  strip            = true
