[package]
  name    = "milo"
  version = "0.4.0"
  edition = "2024"
  publish = false

[lib]
  crate-type = ["cdylib", "staticlib", "lib"]

[features]
  debug = []

[dependencies]
  milo-macros = { path = "../macros" }
  memchr      = "2.8.0"

[dev-dependencies]
  comfy-table = { version = "7.2.2" }
  libc        = "0.2"
  regex       = "1.12.3"
  serde       = { version = "1.0.228", features = ["derive"] }
  serde_json  = "1.0.145"
  serde_yaml  = "0.9.34"
  similar     = "3.0.0"

[profile.release]
  opt-level        = 3
  debug            = false
  debug-assertions = false
  overflow-checks  = false
  lto              = true
  panic            = 'abort'
  incremental      = false
  codegen-units    = 1
  rpath            = false
  strip            = true
