[package]
  name    = "milo-benchmarks"
  version = "0.2.1"
  edition = "2021"
  publish = false

[dependencies]
  milo  = { path = "../../parser" }
  regex = "1.10.4"

[profile.release]
  opt-level        = 3
  debug            = false
  debug-assertions = false
  overflow-checks  = false
  lto              = true
  panic            = 'abort'
  incremental      = false
  codegen-units    = 16
  rpath            = false
  strip            = true
