[package]
  name    = "milo-benchmarks"
  version = "0.4.0"
  edition = "2024"
  publish = false

[dependencies]
  milo  = { path = "../../parser" }
  regex = "1.10.4"

[profile.release]
  opt-level        = 3
  debug            = false
  debug-assertions = false
  overflow-checks  = false
  lto              = true
  panic            = 'abort'
  incremental      = false
  codegen-units    = 1
  rpath            = false
  strip            = true
