[package]
  name    = "milo-reference-rust"
  version = "0.2.0"
  edition = "2021"
  publish = false

[[bin]]
  name = "reference"
  path = "src/reference.rs"

[[bin]]
  name = "readme"
  path = "src/readme.rs"

[dependencies]
  milo            = { path = "../../parser" }
  milo-test-utils = { path = "../../test-utils" }
