[package]
  name    = "milo-reference-rust"
  version = "0.6.0"
  edition = "2024"
  publish = false

[[bin]]
  name = "reference"
  path = "src/reference.rs"

[[bin]]
  name = "readme"
  path = "src/readme.rs"

[dependencies]
  milo-parser = { path = "../../parser" }
  regex      = "1.12.3"
  serde      = { version = "1.0.228", features = ["derive"] }
  serde_json = "1.0.145"
  serde_yaml = "0.9.34"
